@@ -3,7 +3,7 @@
 xfs_growfs, xfs_info \- expand an XFS filesystem
 .SH SYNOPSIS
 .nf
-\f3xfs_growfs\f1 [ \f3\-dilnrxV\f1 ] [ \f3\-D\f1 size ] [ \f3\-e\f1 rtextsize ]
+\f3xfs_growfs\f1 [ \f3\-dIilnrxV\f1 ] [ \f3\-D\f1 size ] [ \f3\-e\f1 rtextsize ]
 		[ \f3\-L\f1 size ] [ \f3\-m\f1 maxpct ] [ \f3-t\f1 mtab ]
 		[ \f3\-R\f1 size ] mount-point
 \f3xfs_info\f1 [ \f3-t\f1 mtab ] mount-point
@@ -50,6 +50,10 @@ In
 this is specified with
 .B \-r
 .BI extsize= nnnn.
+.TP
+.B \-I
+Allow new inode numbers to exceed 32 significant bits.
+(See CONSIDERATIONS below.)
 .TP
 .B \-i
 The new log is an internal log
@@ -129,6 +133,29 @@ Therefore there must be at least one spare new
 disk partition available.
 Adding the space is done through the mechanism of
 logical volumes.
+.SH CONSIDERATIONS
+XFS uses 64-bit inode numbers internally; however, the number of
+significant bits in an inode number is 
+affected by filesystem geometry.  In
+practice, filesystem size and inode size are the predominant factors.
+The Linux kernel and most applications cannot currently handle
+inode numbers greater than 32 significant bits, so 
+.I xfs_growfs
+will issue a warning and fail if growing the filesystem will
+cause the significant bits in inode numbers to exceed 32 bits.
+This can be overwritten with the 
+.B \-I
+option.
+.PP
+If you anticipate significantly growing filesystems after using
+.I mkfs.xfs
+you should take into consideration this inode number growth
+as well,
+and keep the number of significant digits sufficiently small
+to allow for future growth.  On average, doubling the size
+of the inode will reduce significant bits by one, and doubling
+the size of the filesystem will increase significant bits
+by one.
 .SH SEE ALSO
 mkfs.xfs(8),
 lvm(8),
